Therapist junit tests updated